Added unit test libraries (junit, fest, and robolectric)